added dependent dropdown

--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -243,31 +243,22 @@
             <div class="invalid-feedback">Please select a year.</div>
           </div>
 
+         
           <div class="col-md-4">
             <label for="country" class="form-label">Country</label>
-            <select class="form-select" required="">
-              <option value="">Choose...</option>
-              <option>United States</option>
-            </select>
-
+            <input class="form-control" id="country" required="" />
             <div class="invalid-feedback">Please select a valid country.</div>
           </div>
 
           <div class="col-md-4">
             <label for="state" class="form-label">State</label>
-            <select class="form-select" id="state" required="">
-              <option value="">Choose...</option>
-              <option>California</option>
-            </select>
+            <input class="form-control" id="state" required="" />
             <div class="invalid-feedback">Please provide a valid state.</div>
           </div>
 
           <div class="col-md-4">
             <label for="state" class="form-label">City</label>
-            <select class="form-select" id="state" required="">
-              <option value="">Choose...</option>
-              <option>California</option>
-            </select>
+            <input class="form-control" id="state" required="" />
             <div class="invalid-feedback">Please provide a valid city.</div>
           </div>
 
