--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -12,7 +12,7 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
@@ -245,28 +245,19 @@
 
           <div class="col-md-4">
             <label for="country" class="form-label">Country</label>
-            <select class="form-select" id="country" required="">
-              <option value="">Choose...</option>
-              <option>United States</option>
-            </select>
+            <input class="form-control" id="country" required="" />
             <div class="invalid-feedback">Please select a valid country.</div>
           </div>
 
           <div class="col-md-4">
             <label for="state" class="form-label">State</label>
-            <select class="form-select" id="state" required="">
-              <option value="">Choose...</option>
-              <option>California</option>
-            </select>
+            <input class="form-control" id="state" required="" />
             <div class="invalid-feedback">Please provide a valid state.</div>
           </div>
 
           <div class="col-md-4">
             <label for="state" class="form-label">City</label>
-            <select class="form-select" id="state" required="">
-              <option value="">Choose...</option>
-              <option>California</option>
-            </select>
+            <input class="form-control" id="state" required="" />
             <div class="invalid-feedback">Please provide a valid city.</div>
           </div>
 
@@ -289,18 +280,13 @@
             <label for="country" class="form-label">Choose your role</label>
             <select class="form-select" id="country" required="">
               <option value="">Choose...</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
+              <option>Reporter</option>
             </select>
             <div class="invalid-feedback">Please select a year.</div>
           </div>
         </div>
 
         <hr class="my-4" />
-
-        
 
         <h4 class="mb-3">Please answer the following questions.</h4>
         <div class="my-3">
@@ -381,32 +367,36 @@
     </main>
 
     <!-- FOOTER -->
-   <footer class="container mt-5">
-        <hr class="featurette-divider" />
-        <p class="float-end"><a href="#">Back to top</a></p>
-        <p>
-          &copy; Amity University <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-          <span
-            ><ul class="social mb-0 list-inline mt-3">
-              <li class="list-inline-item m-0">
-                <a href="https://www.facebook.com/amitymun/" class="social-link"
-                  ><i class="fa fa-facebook-f"></i
-                ></a>
-              </li>
-              <li class="list-inline-item m-0">
-                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
-                  ><i class="fa fa-instagram"></i
-                ></a>
-              </li>
-              <li class="list-inline-item m-0">
-                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
-                  ><i class="fa fa-linkedin"></i
-                ></a>
-              </li></ul
-          ></span>
-        </p>
-      </footer>
+    <footer class="container mt-5">
+      <hr class="featurette-divider" />
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>
+        &copy; Amity University <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <span
+          ><ul class="social mb-0 list-inline mt-3">
+            <li class="list-inline-item m-0">
+              <a href="https://www.facebook.com/amitymun/" class="social-link"
+                ><i class="fa fa-facebook-f"></i
+              ></a>
+            </li>
+            <li class="list-inline-item m-0">
+              <a
+                href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                class="social-link"
+                ><i class="fa fa-instagram"></i
+              ></a>
+            </li>
+            <li class="list-inline-item m-0">
+              <a
+                href="https://www.linkedin.com/company/amimunconference/"
+                class="social-link"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+            </li></ul
+        ></span>
+      </p>
+    </footer>
     <!-- <div class="container"></div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
