updated nav links

--- a/about.html
+++ b/about.html
@@ -90,17 +90,17 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
+                Apply 
               </a>
               <ul
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="#">Delegate Application</a>
+                  <a class="dropdown-item" href="./register/delegate_register.html">Delegate Application</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="./register/ip_register.html"
                     >International Press Application</a
                   >
                 </li>
