--- a/delegates/ip.html
+++ b/delegates/ip.html
@@ -101,10 +101,10 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="#">Delegate Application</a>
+                  <a class="dropdown-item" href="../register/delegate_register.html">Delegate Application</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="../register/ip_register.html"
                     >International Press Application</a
                   >
                 </li>
