--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -55,7 +55,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
+                Apply
               </a>
               <ul
                 class="dropdown-menu"
