updated nav links

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
+                Apply
               </a>
               <ul
                 class="dropdown-menu"
@@ -167,7 +167,7 @@
                 </h1>
                 <p></p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#" role="button"
+                  <a class="btn btn-lg btn-primary" href="./register/delegate_register.html" role="button"
                     >Apply</a
                   >
                 </p>
@@ -193,7 +193,7 @@
                 <p>
                   <a
                     class="btn btn-lg btn-primary"
-                    href="about.html"
+                    href="./about.html"
                     role="button"
                     >Learn more</a
                   >
